--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./assests/style.css">
+    <link rel="stylesheet" href="./assests/style.css">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -16,6 +16,14 @@
             <label>Search:</label>
             <input type="text" placeholder="Search.." name="search">
             <button class="btn searchBtn" type="submit"><i class="fas fa-search"></i></button>
+        </section>
+        <section>
+            <div class="location-weather">
+                <div class="card bg-light">
+                    <div class="card-body"></div>
+
+                </div>
+            </div>
         </section>
     </main>
 </body>
