added small code edits

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section class="city-input">
             <label>Search:</label>
-            <input type="text" placeholder="Search.." name="search">
+            <input type="text" placeholder="Search.." id="search">
             <button class="btn searchBtn" type="submit"><i class="fas fa-search"></i></button>
         </section>
         <section>
